--- a/src/index.html
+++ b/src/index.html
@@ -24,16 +24,16 @@
 
         <!-- Fonts -->
         <link href="https://fonts.gstatic.com" rel="preconnect" />
-        <link
+        <!-- <link
             href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap"
             rel="stylesheet"
-        />
+        /> -->
 
         <!-- Icon fonts -->
-        <link
+        <!-- <link
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
-        />
+        /> -->
     </head>
 
     <body>
