--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Fuse Angular - Angular Template and Starter Kit</title>
+        <title>Trotapie</title>
         <meta charset="utf-8" />
         <meta
             name="description"
@@ -19,8 +19,7 @@
         <base href="/" />
 
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="favicon-16x16.png" />
-        <link rel="icon" type="image/png" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" href="assets/images/logos/trotapie.png" />
 
         <!-- Fonts -->
         <link href="https://fonts.gstatic.com" rel="preconnect" />
