Cards con imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <body>
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <img src="images/logo/logo.svg" alt="Fuse logo" />
+            <img src="assets/images/logos/trotapie.png" alt="Fuse logo" />
             <div class="spinner">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
