Cambio de mensaje e isotipo y agregar iconos

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
         /> -->
 
         <!-- Icon fonts -->
-        <!-- <link
+         <link
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
-        /> -->
+        />
     </head>
 
     <body>
