Compartir hotel - mensaje

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta
             name="description"
-            content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS"
+            content="Trotapie tu agencia de viajes"
         />
         <meta
             name="keywords"
