--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,52 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <title>Trotapie</title>
-        <meta charset="utf-8" />
-        <meta
-            name="description"
-            content="Trotapie tu agencia de viajes"
-        />
-        <meta
-            name="keywords"
-            content="Fuse,HTML,CSS,Angular,Angular 13,Angular 14,Angular 15,Material,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit"
-        />
-        <meta
-            name="viewport"
-            content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0"
-        />
+<html lang="es">
 
-        <base href="/" />
+<head>
+    <title>Trotapie</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Trotapie, tu agencia de viajes." />
+    <meta name="keywords" content="viajes, hoteles, vacaciones, Trotapie, paquetes, turismo" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0" />
 
-        <!-- Favicon -->
-        <link rel="icon" type="image/png" href="assets/images/logos/trotapie-iso.png" />
+    <base href="/" />
 
-        <!-- Fonts -->
-        <link href="https://fonts.gstatic.com" rel="preconnect" />
-        <!-- <link
-            href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;1,400&display=swap"
-            rel="stylesheet"
-        /> -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/logos/trotapie-iso.png" />
 
-        <!-- Icon fonts -->
-         <link
-            href="https://fonts.googleapis.com/icon?family=Material+Icons"
-            rel="stylesheet"
-        />
-    </head>
+    <!-- 🔹 Open Graph para WhatsApp / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Trotapie" />
+    <meta property="og:title" content="Trotapie - Encuentra tu hotel ideal" />
+    <meta property="og:description" content="Descubre hoteles y destinos con Trotapie." />
+    <meta property="og:image" content="https://app.trotapie.com/assets/images/og/trotapie-hoteles.jpg" />
+    <meta property="og:url" content="https://app.trotapie.com/" />
 
-    <body>
-        <!-- Splash screen -->
-        <fuse-splash-screen>
-            <img src="assets/images/logos/trotapie-iso.png" alt="Fuse logo" />
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
-        </fuse-splash-screen>
+    <!-- (Opcional) Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Trotapie - Encuentra tu hotel ideal" />
+    <meta name="twitter:description" content="Descubre hoteles y paquetes vacacionales en Trotapie." />
+    <meta name="twitter:image" content="https://app.trotapie.com/assets/images/og/trotapie-hoteles.jpg" />
 
-        <!-- App root -->
-        <app-root></app-root>
-    </body>
+    <!-- Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect" />
+
+    <!-- Icon fonts -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
+
+<body>
+    <!-- Splash screen -->
+    <fuse-splash-screen>
+        <img src="assets/images/logos/trotapie-iso.png" alt="Fuse logo" />
+        <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
+    </fuse-splash-screen>
+
+    <!-- App root -->
+    <app-root></app-root>
+</body>
+
 </html>
